add per-page image endpoint plus hooking up missing information to backend
